--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 django = "*"
 djangorestframework = "==3.11.0"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
