--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -9,6 +9,8 @@ verify_ssl = true
 django = "*"
 djangorestframework = "==3.11.0"
 django-cors-headers = "*"
+dj-rest-auth = "*"
+django-allauth = "*"
 
 [requires]
 python_version = "3.7"
